--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,6 +13,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
+# font pango:monospace 10
 font pango:monospace 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -203,6 +204,5 @@ gaps inner 6
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        # status_command i3blocks
         status_command i3status-rs
 }
