--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -59,8 +59,8 @@ keymap = [
 	{ on = [ "<C-r>" ],   run = "select_all --state=none",            desc = "Inverse selection of all files" },
 
 	# Operation
-	{ on = [ "w" ],         run = "shell --interactive \"/home/dave/.local/bin/setwallpaper $0\"",                       desc = "Change the wallpaper" },
-	{ on = [ "W" ],         run = "shell \"/home/dave/.dotfiles/scripts/openwallpaper $0\" --confirm",                       desc = "Open the wallpaper" },
+	{ on = [ "w" ],         run = "shell --orphan \"/home/dave/.local/bin/setwallpaper $0\" --confirm", desc = "Change the wallpaper" },
+	{ on = [ "W" ],         run = "shell \"/home/dave/.dotfiles/scripts/openwallpaper $0\" --confirm", desc = "Open the wallpaper" },
 	{ on = [ "o" ],         run = "open",                       desc = "Open the selected files" },
 	{ on = [ "O" ],         run = "open --interactive",         desc = "Open the selected files interactively" },
 	{ on = [ "<Enter>" ],   run = "open",                       desc = "Open the selected files" },
