--- a/hypr/.config/hypr/launchkeys.conf
+++ b/hypr/.config/hypr/launchkeys.conf
@@ -1,18 +1,15 @@
 $terminal = foot
-$browser = google-chrome-stable
+$browser = chromium-browser
 $menu = rofi -show drun -config /home/dave/.dotfiles/rofi/apprunner.rasi
 
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, B, exec, $browser --disable-session-crashed-bubble
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, E, exec, $terminal --title=yazi -e yazi .
-bind = $mainMod, H, exec, $terminal --title=yazi -e yazi .
-bind = $mainMod, W, exec, /home/dave/.local/bin/wallhaven -c wallpaper 
-bind = $mainMod, l, exec, /home/dave/.local/bin/wallhaven --last-result
-bind = $mainMod SHIFT, W, exec, waypaper
-bind = $mainMod, N, exec, swaync-client -t
+bind = $mainMod, E, exec, $terminal -e /home/dave/.cargo/bin/yazi .
+bind = $mainMod, W, exec, bash -c "systemctl --user start wallpaper.service"
 bind = $mainMod SHIFT, B, exec, /home/dave/.dotfiles/ags/launch.sh
-bind = $mainMod SHIFT, R, exec, /home/dave/.local/bin/toggler /home/dave/.dotfiles/hypr/hyprland.conf
 bind = $mainMod SHIFT, S, exec, grim
 bind = $mainMod, S, exec, grim -g "$(slurp)"
+
+bind = $mainMod SHIFT, Q, exec, systemctl suspend
